--- a/Sandbox/Sandbox/project.json
+++ b/Sandbox/Sandbox/project.json
@@ -1,14 +1,16 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
-    "emitEntryPoint": true
+    "emitEntryPoint": true,
+    "preserveCompilationContext": true
   },
 
   "dependencies": {
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0"
-    }
+    },
+    "RazorLight": "1.0.0-*"
   },
 
   "frameworks": {
