--- a/src/RazorLight/project.json
+++ b/src/RazorLight/project.json
@@ -16,7 +16,8 @@
     "Microsoft.Extensions.FileProviders.Abstractions": "1.0.0",
     "Microsoft.Extensions.FileProviders.Physical": "1.0.0",
     "System.Text.Encodings.Web": "4.0.0",
-    "Microsoft.CodeAnalysis.CSharp": "1.3.0"
+    "Microsoft.CodeAnalysis.CSharp": "1.3.0",
+    "System.Buffers": "4.0.0"
   },
 
   "frameworks": {
