--- a/src/RazorLight/project.json
+++ b/src/RazorLight/project.json
@@ -2,7 +2,7 @@
   "title": "RazorLight",
   "name": "RazorLight",
   "language": "en",
-  "version": "0.0.1-*",
+  "version": "1.0.0-beta1",
   "description": "A lightweight fork of Microsoft Razor template engine which allows you to parse a string or *.cshtml files without any efforts. ",
   "authors": ["toddams"],
 
