--- a/Sandbox/Sandbox/project.json
+++ b/Sandbox/Sandbox/project.json
@@ -2,7 +2,10 @@
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "embed": [
+      "Test.cshtml"
+    ]
   },
 
   "dependencies": {
