--- a/Sandbox/Sandbox/project.json
+++ b/Sandbox/Sandbox/project.json
@@ -4,7 +4,7 @@
     "emitEntryPoint": true,
     "preserveCompilationContext": true,
     "embed": [
-      "Test.cshtml"
+      "Views/*.cshtml"
     ]
   },
 
