Edit environment variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: csharp
 sudo: required  
 dist: trusty  
 env:  
-  - CLI_VERSION=latest
-  - IS_TESTING_ENVIRONMENT=true
+  - CLI_VERSION=latest IS_TESTING_ENVIRONMENT=true
 addons:  
   apt:
     packages:
