--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ platform: Any CPU
 environment:
   # Don't report back to the mothership
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  IS_TESTING_ENVIRONMENT: true
 before_build:
   - appveyor-retry dotnet restore -v Minimal
 build_script:
