--- a/Sandbox/Sandbox/project.json
+++ b/Sandbox/Sandbox/project.json
@@ -7,18 +7,19 @@
       "Views/*.cshtml"
     ]
   },
-
   "dependencies": {
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0"
     },
-    "RazorLight": "1.0.0-beta2"
+    "RazorLight": "1.0.0-beta*"
   },
-
   "frameworks": {
     "netcoreapp1.0": {
       "imports": "dnxcore50"
     }
+  },
+  "configurations": {
+    "NETSTANDARD_16": {}
   }
 }
