--- a/src/RazorLight/project.json
+++ b/src/RazorLight/project.json
@@ -2,29 +2,28 @@
   "title": "RazorLight",
   "name": "RazorLight",
   "language": "en",
-  "version": "1.0.0-beta4",
+  "version": "1.0.0-beta5",
   "description": "Use Razor template engine to parse strings / files / EmbeddedResources for .NET Core ",
   "authors": [ "toddams" ],
 
   "dependencies": {
-    "System.Runtime.InteropServices": "4.1.0",
-    "Microsoft.Extensions.DependencyModel": "1.0.0-*",
+    "System.Buffers": "4.0.0",
+    "System.Text.Encodings.Web": "4.0.0",
     "Microsoft.AspNetCore.Razor": "1.0.0",
     "Microsoft.AspNetCore.Razor.Runtime": "1.0.0",
     "Microsoft.AspNetCore.Html.Abstractions": "1.0.0",
     "Microsoft.Extensions.Caching.Memory": "1.0.0",
     "Microsoft.Extensions.FileProviders.Abstractions": "1.0.0",
     "Microsoft.Extensions.FileProviders.Physical": "1.0.0",
-    "System.Text.Encodings.Web": "4.0.0",
-    "Microsoft.CodeAnalysis.CSharp": "1.3.0",
-    "System.Buffers": "4.0.0"
+    "Microsoft.CodeAnalysis.CSharp": "1.3.0"
   },
 
   "frameworks": {
+    "net451": {},
     "netstandard1.6": {
       "dependencies": {
-        "System.Text.Encoding": "4.0.11",
-        "System.Runtime.Loader": "4.0.0"
+        "System.Runtime.Loader": "4.0.0",
+        "Microsoft.Extensions.DependencyModel": "1.0.0-*"
       }
     }
   },
