Create project for MVC integration. Sandbox for MVC project

--- a/Sandbox/Sandbox/project.json
+++ b/Sandbox/Sandbox/project.json
@@ -8,18 +8,18 @@
     ]
   },
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.0"
-    },
     "RazorLight": "1.0.0-beta*"
   },
   "frameworks": {
     "netcoreapp1.0": {
+      "dependencies": {
+        "Microsoft.NETCore.App": {
+          "type": "platform",
+          "version": "1.0.0"
+        }
+      },
       "imports": "dnxcore50"
-    }
-  },
-  "configurations": {
-    "NETSTANDARD_16": {}
+    },
+    "net451": {}
   }
 }
