--- a/src/RazorLight.MVC/project.json
+++ b/src/RazorLight.MVC/project.json
@@ -2,20 +2,20 @@
   "title": "RazorLight ASP.NET MVC Core integration",
   "name": "RazorLight.MVC",
   "language": "en",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "This package adds integration to ASP.NET MVC Core",
   "authors": [ "toddams" ],
 
+  "dependencies": {
+    "Microsoft.AspNetCore.Hosting.Abstractions": "1.0.0",
+    "Microsoft.Extensions.DependencyInjection": "1.0.0",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
+    "RazorLight": "1.0.0-beta*"
+  },
+
   "frameworks": {
-    "netstandard1.6": {
-      "dependencies": {
-        "Microsoft.AspNetCore.Hosting.Abstractions": "1.0.0",
-        "Microsoft.Extensions.DependencyInjection": "1.0.0",
-        "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
-        "RazorLight": "1.0.0-beta*"
-      },
-      "imports": "dnxcore50"
-    }
+    "netstandard1.6": {},
+    "net451": {}
   },
 
   "scripts": {
