Prerender callbacks to IEngineConfiguration. Move RenderString to an extension method

--- a/src/RazorLight.MVC/project.json
+++ b/src/RazorLight.MVC/project.json
@@ -1,5 +1,5 @@
 {
-  "title": "RazorLight ASP.NET MVC Core integration",
+  "title": "RazorLight.MVC",
   "name": "RazorLight.MVC",
   "language": "en",
   "version": "1.0.2",
