Migrate to MSBuild

--- a/Backup/sandbox/Sandbox/project.json
+++ b/Backup/sandbox/Sandbox/project.json
@@ -8,7 +8,7 @@
     ]
   },
   "dependencies": {
-    "RazorLight": "1.0.0-beta*"
+    "RazorLight": "1.0.0-rc1"
   },
   "frameworks": {
     "netcoreapp1.0": {
