--- a/src/RazorLight/RazorLight.csproj
+++ b/src/RazorLight/RazorLight.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Buffers" Version="4.0.0" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.0.0" />
     <PackageReference Include="System.Text.Encodings.Web" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="1.0.1" />
