--- a/src/RazorLight.MVC/RazorLight.MVC.csproj
+++ b/src/RazorLight.MVC/RazorLight.MVC.csproj
@@ -19,9 +19,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.0.1" />
   </ItemGroup>
 
-  <Target Name="PostcompileScript" AfterTargets="Build" Condition=" '$(IsCrossTargetingBuild)' != 'true' ">
+  <!--<Target Name="PostcompileScript" AfterTargets="Build" Condition=" '$(IsCrossTargetingBuild)' != 'true' ">
     <Exec Command="../../makeNuget.cmd $(Configuration) Release ../../nuget" />
-  </Target>
+  </Target>-->
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <Reference Include="System" />
