--- a/sandbox/RazorLight.Sandbox.csproj
+++ b/sandbox/RazorLight.Sandbox.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\src\RazorLight\RazorLight.csproj" />
+  </ItemGroup>
 
 </Project>
