--- a/src/RazorLight/RazorLight.csproj
+++ b/src/RazorLight/RazorLight.csproj
@@ -1,40 +1,44 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Description>Use Razor template engine to parse strings / files / EmbeddedResources for .NET Core </Description>
-    <AssemblyTitle>RazorLight</AssemblyTitle>
-    <VersionPrefix>1.0.0</VersionPrefix>
-    <Authors>toddams</Authors>
-    <TargetFrameworks>net451;netstandard1.6</TargetFrameworks>
-    <AssemblyName>RazorLight</AssemblyName>
-    <PackageId>RazorLight</PackageId>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-  </PropertyGroup>
+	<PropertyGroup>
+		<AssemblyTitle>RazorLight</AssemblyTitle>
+		<Description>Use Razor to build your templates from strings / files / EmbeddedResources outside of ASP.NET MVC for .NET Core </Description>
+		<Authors>toddams</Authors>
+		<TargetFrameworks>net451;netstandard1.6</TargetFrameworks>
+		<AssemblyName>RazorLight</AssemblyName>
+		<PackageId>RazorLight</PackageId>
+		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+		<Version>1.0.0</Version>
+		<PackageProjectUrl>https://github.com/toddams/RazorLight</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/toddams/RazorLight</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>Razor, RazorLight, template-engine, email, emails, dotnet, netcore.</PackageTags>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="1.3.2" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="1.1.0" />
-    <PackageReference Include="System.Buffers" Version="4.3.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="1.3.2" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Razor" Version="1.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="1.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="1.1.1" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="1.1.0" />
+		<PackageReference Include="System.Buffers" Version="4.3.0" />
+	</ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
+		<Reference Include="System" />
+		<Reference Include="Microsoft.CSharp" />
+	</ItemGroup>
 
-  <!--<Target Name="PostcompileScript" AfterTargets="Build" Condition=" '$(IsCrossTargetingBuild)' != 'true' ">
+	<!--<Target Name="PostcompileScript" AfterTargets="Build" Condition=" '$(IsCrossTargetingBuild)' != 'true' ">
     <Exec Command="../../makeNuget.cmd $(Configuration) Release ../../nuget" />
   </Target>-->
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.1.1" />
-  </ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
+		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.1.1" />
+	</ItemGroup>
 
 </Project>
