--- a/src/RazorLight/RazorLight.csproj
+++ b/src/RazorLight/RazorLight.csproj
@@ -18,7 +18,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="1.3.*" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="1.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Razor" Version="1.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="1.1.1" />
