--- a/RazorLight.Tests/RazorLight.Tests.csproj
+++ b/RazorLight.Tests/RazorLight.Tests.csproj
@@ -8,8 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="Moq" Version="4.7.99" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\src\RazorLight\RazorLight.csproj" />
   </ItemGroup>
 
 </Project>
