Create tests for template page

--- a/RazorLight.Tests/RazorLight.Tests.csproj
+++ b/RazorLight.Tests/RazorLight.Tests.csproj
@@ -7,6 +7,10 @@
     <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Assets\Embedded\*.cshtml" />
   </ItemGroup>
