Allow unsafe for tests project

--- a/RazorLight.Tests/RazorLight.Tests.csproj
+++ b/RazorLight.Tests/RazorLight.Tests.csproj
@@ -11,6 +11,11 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>false</Optimize>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Assets\Embedded\*.cshtml" />
   </ItemGroup>
