Revert "UrlHelpers attempt"
This reverts commit 7e0f19203f753864a7dc2e8f1c06d7ae8eaa229d.

--- a/sandbox/RazorLight.Sandbox/RazorLight.Sandbox.csproj
+++ b/sandbox/RazorLight.Sandbox/RazorLight.Sandbox.csproj
@@ -12,11 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\RazorLight\RazorLight.csproj" />
+    <EmbeddedResource Include="Views\Shared\azaza.cshtml" />
+    <EmbeddedResource Include="Views\Subfolder\go.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Shared\" />
+    <ProjectReference Include="..\..\src\RazorLight\RazorLight.csproj" />
   </ItemGroup>
 
 </Project>
