Attempt to fix Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,15 @@
 language: csharp  
-sudo: required  
-dist: trusty  
+mono: none
+dotnet: 2.0.0
+dist: trusty
 env:  
-  - CLI_VERSION=latest IS_TESTING_ENVIRONMENT=true
-addons:  
-  apt:
-    packages:
-    - gettext
-    - libcurl4-openssl-dev
-    - libicu-dev
-    - libssl-dev
-    - libunwind8
-    - zlib1g
+  - IS_TESTING_ENVIRONMENT=true
 os:  
   - linux
 branches:  
   only:
     - master
-before_install:  
-  - if test "$TRAVIS_OS_NAME" == "osx"; then brew update; brew install openssl; ln -s /usr/local/opt/openssl/lib/libcrypto.1.0.0.dylib /usr/local/lib/; ln -s /usr/local/opt/openssl/lib/libssl.1.0.0.dylib /usr/local/lib/; fiopenssl; fi
-install:  
-  - export DOTNET_INSTALL_DIR="$PWD/.dotnetcli"
-  - curl -sSL https://raw.githubusercontent.com/dotnet/cli/rel/1.0.0/scripts/obtain/dotnet-install.sh | bash /dev/stdin --version "$CLI_VERSION" --install-dir "$DOTNET_INSTALL_DIR"
-  - export PATH="$DOTNET_INSTALL_DIR:$PATH"  
 script:  
   - dotnet --info
   - dotnet restore
-  - chmod +x test.sh
-  - ./test.sh
+  - dotnet test tests/RazorLight.Tests/RazorLight.Tests.csproj
