--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: csharp  
 mono: none
-dotnet: 3.0.100
+dotnet: 3.0.0
 dist: trusty
+
+before_install:
+  - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+  - sudo dpkg -i packages-microsoft-prod.deb
+  - sudo add-apt-repository universe
+  - sudo apt-get update
+  - sudo apt-get install apt-transport-https
+  - sudo apt-get update
 env:  
   - IS_TESTING_ENVIRONMENT=true
 os:  
