Manually install .NET Core 3.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: csharp  
 mono: none
-dotnet: 3.0.0
+dotnet: 2.0.0
 dist: bionic
 
-before_install:
+before_script:
   - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
   - sudo dpkg -i packages-microsoft-prod.deb
   - sudo add-apt-repository universe
   - sudo apt-get update
   - sudo apt-get install apt-transport-https
   - sudo apt-get update
+  - sudo apt-get install dotnet-sdk-3.0
 env:  
   - IS_TESTING_ENVIRONMENT=true
 os:  
@@ -17,7 +18,7 @@ os:
 branches:  
   only:
     - master
-script:  
+script: 
   - dotnet --info
   - dotnet restore
   - dotnet test tests/RazorLight.Tests/RazorLight.Tests.csproj
