Include xml docs & snupkg debug package
Resolves #285

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,7 @@ root = true
 # Tab indentation
 [*.{cs,cshtml}]
 indent_style = tab
+[*.cs]
+
+# CS1591: Missing XML comment for publicly visible type or member
+dotnet_diagnostic.CS1591.severity = none
