--- a/src/RazorLight/RazorLight.csproj
+++ b/src/RazorLight/RazorLight.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+      <TargetFrameworks>netcoreapp3.0;netcoreapp3.1;net5.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -17,22 +17,6 @@
     <IncludeSymbols>true</IncludeSymbols>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.CodeAnalysis.Razor" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="[2.1.0,3)" />
-    <PackageReference Include="Microsoft.Extensions.Primitives" Version="[2.1.0,3)" />
-    <PackageReference Include="System.Buffers" Version="4.5.0" />
-  </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
@@ -59,6 +43,19 @@
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="3.1.5" />
     <PackageReference Include="System.Buffers" Version="4.5.0" />
   </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="5.0.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Razor" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Primitives" Version="5.0.0" />
+        <PackageReference Include="System.Buffers" Version="4.5.1" />
+    </ItemGroup>
 
   <ItemGroup>
     <None Include="..\..\LICENSE">
